Apply classification to data.

--- a/define_class_ref_data/Try_Defining_Ref_Data.ipynb
+++ b/define_class_ref_data/Try_Defining_Ref_Data.ipynb
@@ -1068,7 +1068,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "e3c60d21-1697-4859-9a90-8388d92c83ba",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
