--- a/apply_classifer/Apply_Classifier_Test.ipynb
+++ b/apply_classifer/Apply_Classifier_Test.ipynb
@@ -141,7 +141,9 @@
   {
    "cell_type": "markdown",
    "id": "9d64a78e-1aae-4c71-a209-2b34cef2fc00",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Display quicklook image so we know what to expect"
    ]
@@ -4182,7 +4184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
