--- a/test_flatten_xr/TestFlattenXR.ipynb
+++ b/test_flatten_xr/TestFlattenXR.ipynb
@@ -184,6 +184,13 @@
      "text": [
       "https://pccompute.westeurope.cloudapp.azure.com/compute/services/dask-gateway/clusters/prod.d57de8d8adfa497899fff56b4680cef7/status\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-04 08:40:51,659 - distributed.client - ERROR - Failed to reconnect to scheduler after 10.00 seconds, closing client\n"
+     ]
     }
    ],
    "source": [
